[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/Place.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/partner_driver.gd" type="Script" id=3]
[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/gamescene_root.gd" type="Script" id=5]
[ext_resource path="res://scenes/Partner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Crossroad.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/camera.gd" type="Script" id=8]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/SpawnableLocation.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/all_crossroads.gd" type="Script" id=11]
[ext_resource path="res://scenes/HUDGameOver.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/partner_factory.gd" type="Script" id=13]
[ext_resource path="res://scripts/spawn_timer.gd" type="Script" id=14]
[ext_resource path="res://scripts/baby_names.gd" type="Script" id=15]

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )
game_over_hud = ExtResource( 12 )

[node name="Map" parent="." instance=ExtResource( 4 )]
position = Vector2( -32, -32 )

[node name="AllCrossroads" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Movable" type="Node" parent="AllCrossroads"]

[node name="Crossroads27" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 1152, 448 )
direction = 1
enable_up = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads2" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 0 )
direction = 1
enable_up = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads5" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 192 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads15" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 768 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads16" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 1024 )
direction = 1
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads17" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 960 )
direction = 1
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads18" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 768 )
direction = 1
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads3" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 256 )
direction = 1
enable_down = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads6" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 256 )
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads4" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 0, 256 )
direction = 2
locked = true
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads7" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 0 )
direction = 1
enable_up = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads8" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 960, 0 )
direction = 3
locked = true
enable_up = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads9" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 960, 192 )
locked = true
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads10" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 1216, 192 )
direction = 1
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads11" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 1216, 320 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads12" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 960, 384 )
direction = 2
locked = true
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads13" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 960, 448 )
direction = 2
locked = true
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads14" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 384 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads19" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 0, 576 )
direction = 1
locked = true
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads20" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 576, 832 )
direction = 1
enable_right = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads21" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 832 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads22" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 1024 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads23" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 0, 960 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads24" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 0, 768 )
direction = 1
enable_left = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads25" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 320, 576 )
direction = 1
locked = true
enable_up = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads26" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 960, 768 )
direction = 2
locked = true
enable_down = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads28" parent="AllCrossroads/Movable" instance=ExtResource( 7 )]
position = Vector2( 1280, 832 )
direction = 1
enable_down = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Static" type="Node" parent="AllCrossroads"]

[node name="Crossroads" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
direction = 5
locked = true
enable_left = false
enable_up = false
enable_continue = false

[node name="Crossroads20" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 576, 576 )
direction = 2
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads21" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 320, 1216 )
direction = 5
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads22" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 0, 1216 )
direction = 6
enable_left = false
enable_down = false
enable_bend_1 = false

[node name="Crossroads23" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 576, 1088 )
direction = 6
enable_left = false
enable_down = false
enable_continue = false
enable_bend_1 = false

[node name="Crossroads24" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 960, 1160 )
direction = 6
locked = true
enable_left = false
enable_down = false
enable_continue = false
enable_bend_1 = false

[node name="Crossroads25" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 960, 1088 )
direction = 6
locked = true
enable_right = false
enable_up = false
enable_continue = false
enable_bend_1 = false

[node name="Crossroads26" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1088, 1160 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads2" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1088, 1088 )
direction = 5
locked = true
enable_left = false
enable_up = false
enable_continue = false

[node name="Crossroads3" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1152, 896 )
direction = 5
locked = true
enable_left = false
enable_up = false
enable_continue = false

[node name="Crossroads27" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1152, 1088 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads28" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1216, 896 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads4" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1216, 832 )
direction = 5
locked = true
enable_left = false
enable_up = false
enable_continue = false

[node name="Crossroads29" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1418, 832 )
locked = true
enable_right = false
enable_up = false
enable_down = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads5" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1280, 640 )
direction = 5
locked = true
enable_left = false
enable_up = false
enable_continue = false

[node name="Crossroads30" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1344, 640 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads31" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1344, 320 )
direction = 6
locked = true
enable_right = false
enable_up = false
enable_continue = false
enable_bend_1 = false

[node name="Crossroads32" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 710, 576 )
locked = true
enable_right = false
enable_up = false
enable_down = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads33" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1216, 448 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads34" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1152, 704 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads35" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1088, 768 )
direction = 5
locked = true
enable_right = false
enable_down = false
enable_continue = false
enable_bend_2 = false

[node name="Crossroads6" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1088, 704 )
direction = 5
locked = true
enable_left = false
enable_up = false
enable_continue = false

[node name="Crossroads10" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1450, 192 )
enable_right = false
enable_up = false
enable_down = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads36" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1088, 192 )
direction = 6
locked = true
enable_left = false
enable_down = false
enable_continue = false
enable_bend_1 = false

[node name="Crossroads8" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1088, 112 )
direction = 3
locked = true
enable_left = false
enable_right = false
enable_up = false
enable_continue = false
enable_bend_1 = false
enable_bend_2 = false

[node name="Crossroads37" parent="AllCrossroads/Static" instance=ExtResource( 7 )]
position = Vector2( 1216, 0 )
direction = 6
locked = true
enable_right = false
enable_up = false
enable_continue = false
enable_bend_1 = false

[node name="PartnerDriver" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="SpawnTimer" type="Timer" parent="PartnerDriver"]
wait_time = 30.0
autostart = true
script = ExtResource( 14 )

[node name="PartnerFactory" type="Node2D" parent="PartnerDriver"]
script = ExtResource( 13 )
partner_scene = ExtResource( 6 )

[node name="BabyGenerator" type="Node2D" parent="PartnerDriver/PartnerFactory"]
script = ExtResource( 15 )

[node name="MapCamera" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 481, 291 )
current = true
limit_left = -128
limit_top = -128
limit_right = 1200
limit_bottom = 1000
script = ExtResource( 8 )

[node name="ZoomTween" type="Tween" parent="MapCamera"]

[node name="PosTween" type="Tween" parent="MapCamera"]

[node name="HUD" parent="." instance=ExtResource( 9 )]
scale = Vector2( 0.01, 1 )
transform = Transform2D( 0.01, 0, 0, 1, 0, 0 )

[node name="AllPlaces" type="Node2D" parent="."]
position = Vector2( 0, 448 )

[node name="GalleryPlace" parent="AllPlaces" instance=ExtResource( 2 )]
position = Vector2( 640, 128 )
place = "gallery"

[node name="LibraryPlace" parent="AllPlaces" instance=ExtResource( 2 )]
position = Vector2( 448, -192 )
place = "library"

[node name="CafePlace" parent="AllPlaces" instance=ExtResource( 2 )]
position = Vector2( 64, -192 )
place = "cafe"

[node name="DiscoPlace" parent="AllPlaces" instance=ExtResource( 2 )]
position = Vector2( 128, 128 )
place = "disco"

[node name="SpawnableLocations" type="Node" parent="."]

[node name="Location1" parent="SpawnableLocations" instance=ExtResource( 10 )]
position = Vector2( 192, 0 )

[node name="Location2" parent="SpawnableLocations" instance=ExtResource( 10 )]
position = Vector2( 384, 576 )

[node name="Location3" parent="SpawnableLocations" instance=ExtResource( 10 )]
position = Vector2( 768, 192 )

[connection signal="timeout" from="PartnerDriver/SpawnTimer" to="PartnerDriver" method="_on_SpawnTimer_timeout"]
